# connectrpc-axum

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  ISSUE_REVIEW.md  Makefile.toml  README.md  buffa.md  bugs.md  frame.md  oh-my-opencode.json  package.json  pipeline.md  pnpm-lock.yaml  pr4.md  pr5.md  pr6.md  pr7.md  todo.md
benchmarks/: .gitignore  Cargo.toml  README.md  buf.gen.yaml  build.rs  generate-go.sh
benchmarks/compare-buffa-beta5/: Cargo.toml  README.md
benchmarks/compare-buffa-beta5/cases-beta5/: Cargo.toml
benchmarks/compare-buffa-beta5/cases-buffa/: Cargo.toml  build.rs
benchmarks/compare-buffa-beta5/cases-connectrpc/: Cargo.toml  build.rs
benchmarks/compare-buffa-beta5/cases-release/: Cargo.toml
benchmarks/compare-buffa-beta5/common/: Cargo.toml
benchmarks/compare-buffa-beta5/proto/: fortune.proto  hello.proto
benchmarks/compare-buffa-beta5/results/: 2026-03-26-conclusion.md  2026-03-26-fortunes.md  2026-03-26-initial.md  2026-03-27-fortunes-aligned.md  2026-03-27-fortunes-proto-json.md
benchmarks/compare-buffa-beta5/runner/: Cargo.toml
benchmarks/compare-buffa-beta5/scripts/: bench_codegen.sh  summarize_results.sh
benchmarks/connect-go/: go.mod  go.sum
benchmarks/proto/: bench.proto  fortune.proto
benchmarks/src/: connect_rust.rs  lib.rs  support.rs
connectrpc-axum/: Cargo.toml
connectrpc-axum-build/: Cargo.toml
connectrpc-axum-build/src/: gen.rs  include_file.rs  lib.rs  merge.rs  model.rs  schema.rs
connectrpc-axum-build/src/schema/: prost.rs
connectrpc-axum-build/tests/: no_tonic_codegen.rs
connectrpc-axum-client/: Cargo.toml
connectrpc-axum-client/src/: builder.rs  client.rs  config.rs  error.rs  error_parser.rs  frame.rs  interceptor.rs  lib.rs  options.rs  request.rs  response.rs  stream_body.rs  streaming.rs  test_support.rs  transport.rs
connectrpc-axum-client/src/config/: interceptor.rs  options.rs  retry.rs
connectrpc-axum-client/src/request/: encoder.rs
connectrpc-axum-client/src/response/: decoder.rs  error_parser.rs  intercepting.rs  streaming.rs  types.rs
connectrpc-axum-client/src/transport/: body.rs  connector.rs  hyper.rs
connectrpc-axum-core/: Cargo.toml
connectrpc-axum-core/src/: codec.rs  compression.rs  envelope.rs  error.rs  lib.rs
connectrpc-axum-examples/: Cargo.toml  Makefile.toml  README.md  TASKS.md  buf.gen.yaml  build.rs  test-all.sh
connectrpc-axum-examples/go-client/: .gitignore  README.md  axum_router_test.go  bidi_stream_test.go  client_streaming_compression_test.go  common_test.go  compression_algos_test.go  endstream_metadata_test.go  error_details_test.go  extractor_test.go  get_request_test.go  go.mod  grpc_web_test.go  idempotency_get_test.go  integration_test.go  protocol_negotiation_test.go  protocol_version_test.go  receive_max_bytes_test.go  send_max_bytes_test.go  server_stream_test.go  streaming_compression_test.go  streaming_error_test.go  streaming_extractor_test.go  timeout_test.go  tonic_extractor_test.go  unary_error_metadata_test.go  unary_test.go
connectrpc-axum-examples/go-server/: go.mod  go.sum  main.go
connectrpc-axum-examples/proto/: bench.proto  hello.proto
connectrpc-axum-examples/src/: lib.rs  main.rs  test_module_include.rs
connectrpc-axum-test/: Cargo.toml  buf.gen.yaml  build.rs  integration-tests.feature
connectrpc-axum-test/features/: 01-core-unary.feature  02-errors-metadata.feature  03-size-limits.feature  04-auth-extractors.feature  05-streaming-core.feature  06-compression.feature  07-tonic-grpc.feature  08-routing.feature
connectrpc-axum-test/go/: go.mod  go.sum
connectrpc-axum-test/proto/: echo.proto  hello.proto
connectrpc-axum-test/src/: axum_router.rs  client_streaming_compression.rs  compression_algos.rs  connect_bidi_stream.rs  connect_client_stream.rs  connect_server_stream.rs  connect_unary.rs  endstream_metadata.rs  error_details.rs  extractor_connect_error.rs  extractor_http_response.rs  get_request.rs  grpc_web.rs  idempotency_get_connect_client.rs  main.rs  protocol_negotiation.rs  protocol_version.rs  receive_max_bytes.rs  receive_max_bytes_5mb.rs  receive_max_bytes_unlimited.rs  send_max_bytes.rs  server_timeout.rs  socket.rs  streaming_compression_gzip.rs  streaming_error.rs  streaming_extractor.rs  streaming_extractor_client.rs  streaming_receive_max_bytes.rs  streaming_send_max_bytes.rs  tonic_bidi_server.rs  tonic_extractor.rs  tonic_server_stream.rs  tonic_unary.rs  unary_error_metadata.rs  view_stream.rs  view_unary.rs
connectrpc-axum-test/src/axum_router/: client.rs  server.rs
connectrpc-axum-test/src/client_streaming_compression/: client.rs  server.rs
connectrpc-axum-test/src/compression_algos/: client.rs  server.rs
connectrpc-axum-test/src/connect_bidi_stream/: client.rs  server.rs
connectrpc-axum-test/src/connect_client_stream/: client.rs  server.rs
connectrpc-axum-test/src/connect_server_stream/: client.rs  server.rs
connectrpc-axum-test/src/connect_unary/: client.rs  server.rs
connectrpc-axum-test/src/endstream_metadata/: client.rs  server.rs
connectrpc-axum-test/src/error_details/: client.rs  server.rs
connectrpc-axum-test/src/extractor_connect_error/: client.rs  server.rs
connectrpc-axum-test/src/extractor_http_response/: client.rs  server.rs
connectrpc-axum-test/src/get_request/: client.rs  server.rs
connectrpc-axum-test/src/grpc_web/: client.rs  server.rs
connectrpc-axum-test/src/idempotency_get_connect_client/: client.rs  server.rs
connectrpc-axum-test/src/protocol_negotiation/: client.rs  server.rs
connectrpc-axum-test/src/protocol_version/: client.rs  server.rs
connectrpc-axum-test/src/receive_max_bytes/: client.rs  server.rs
connectrpc-axum/src/: compression.rs  context.rs  error.rs  extractor.rs  handler.rs  layer.rs  lib.rs  limits.rs  message.rs  pipeline.rs  protocol.rs  request.rs  response.rs  service_builder.rs  stream_response.rs  tonic.rs  view.rs
connectrpc-axum/src/context/: config.rs  (+6 more)
connectrpc-axum/tests/: semantic_handler_signatures.rs
tonic-buffa-build/: Cargo.toml  README.md
tonic-buffa-build/src/: include_file.rs  lib.rs
(+183 files in other folders)
