[workspace]
resolver = "2"
members = [
  "connectrpc-axum",
  "connectrpc-axum-build",
  "connectrpc-axum-examples",
]

[workspace.package]
version = "0.0.17"
edition = "2024"
repository = "https://github.com/washanhanzi/connectrpc-axum"

[workspace.dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = "0.8"
axum-core = "0.5"
axum-extra = "0.12"
base64 = "0.22.1"
bytes = "1"
convert_case = "0.10"
futures = "0.3.31"
http = "1.1.0"
http-body = "1.0"
http-body-util = "0.1"
hyper = "1.0"
pbjson = "0.9"
pbjson-build = "0.9"
pbjson-types = "0.9"
pin-project-lite = "0.2"
proc-macro2 = "1.0"
prost = "0.14"
prost-build = "0.14"
prost-reflect = "0.16"
prost-types = "0.14"
protoc-fetcher = "0.1.2"
quote = "1.0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.15"
syn = "2.0"
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tonic = "0.14"
tonic-web = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tower = "0.5"
tower-http = "0.6"
tracing = "0.1"
flate2 = "1.0"
