[package]
name = "connectrpc-axum-build"
version.workspace = true
edition.workspace = true
description = "Code generation for connectrpc-axum"
readme = "../README.md"
repository = "https://github.com/washanhanzi/connectrpc-axum"
license = "MIT"

[dependencies]
convert_case = { workspace = true }
pbjson-build = { workspace = true }
proc-macro2 = { workspace = true }
prost = { workspace = true }
prost-build = { workspace = true }
prost-types = { workspace = true }
protoc-fetcher = { workspace = true, optional = true }
quote = { workspace = true }
tonic-prost-build = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
fetch-protoc = ["dep:protoc-fetcher"]
tonic = ["dep:tonic-prost-build"]
tonic-client = ["dep:tonic-prost-build"]
