[package]
name = "connectrpc-axum-build"
version.workspace = true
edition.workspace = true
description = "Code generation for connectrpc-axum"
readme = "../README.md"
repository = "https://github.com/washanhanzi/connectrpc-axum"
license = "MIT"

[dependencies]
buffa-build = { workspace = true }
convert_case = { workspace = true }
proc-macro2 = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
protoc-fetcher = { workspace = true, optional = true }
quote = { workspace = true }
tempfile = { workspace = true }
tonic-buffa-build = { workspace = true, optional = true }

[dev-dependencies]
[features]
default = []
fetch-protoc = ["dep:protoc-fetcher"]
tonic = ["dep:tonic-buffa-build"]
tonic-client = ["dep:tonic-buffa-build"]
