[package]
name = "connectrpc-axum-client"
version = "0.1.0-alpha.1"
edition = "2024"
description = "Connect protocol client for connectrpc-axum"
repository = "https://github.com/washanhanzi/connectrpc-axum"
license = "MIT"

[dependencies]
# Core protocol types
connectrpc-axum-core = { path = "../connectrpc-axum-core" }

# HTTP client (hyper-based)
hyper = { version = "1.6", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http2", "ring", "tls12", "webpki-tokio"] }
http-body = { workspace = true }
http-body-util = { workspace = true }
tower = { workspace = true }
tower-service = "0.3"
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
webpki-roots = "0.26"
pin-project-lite = "0.2"

# Serialization
bytes = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP types
http = { workspace = true }

# Async
futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "time", "rt"] }

# Compression (re-use from core via features)
flate2 = { workspace = true, optional = true }
brotli = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }

# Error handling
thiserror = { workspace = true }

# Base64 for error detail parsing
base64 = { workspace = true }

# Observability (optional)
tracing = { workspace = true, optional = true }

[features]
default = []
compression-gzip-stream = ["dep:flate2", "connectrpc-axum-core/compression-gzip-stream"]
compression-deflate-stream = ["dep:flate2", "connectrpc-axum-core/compression-deflate-stream"]
compression-br-stream = ["dep:brotli", "connectrpc-axum-core/compression-br-stream"]
compression-zstd-stream = ["dep:zstd", "connectrpc-axum-core/compression-zstd-stream"]
compression-full-stream = ["compression-gzip-stream", "compression-deflate-stream", "compression-br-stream", "compression-zstd-stream"]
# Enable tracing instrumentation for RPC calls
tracing = ["dep:tracing"]

[dev-dependencies]
# For integration tests
connectrpc-axum = { path = "../connectrpc-axum" }
axum = { workspace = true }
tokio = { workspace = true, features = ["full", "macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
