[package]
name = "connectrpc-axum-client"
version = "0.1.0-beta.2"
edition = "2024"
description = "Connect protocol client for connectrpc-axum"
repository = "https://github.com/washanhanzi/connectrpc-axum"
license = "MIT"

[dependencies]
# Core protocol types
connectrpc-axum-core = { workspace = true }

# HTTP client (hyper-based)
hyper = { version = "1.6", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = [
    "client",
    "client-legacy",
    "http1",
    "http2",
    "tokio",
] }
hyper-rustls = { version = "0.27", default-features = false, features = [
    "http2",
    "tls12",
] }
http-body = { workspace = true }
http-body-util = { workspace = true }
tower = { workspace = true }
tower-service = "0.3"
rustls = { version = "0.23", default-features = false, features = [
    "std",
    "tls12",
] }
pin-project-lite = "0.2"

# TLS - crypto providers (optional)
# ring is the default, aws-lc-rs is an alternative
# Users must enable one of these for TLS support

# TLS - root certificates (optional)
# native-roots uses system certs, webpki-roots bundles Mozilla certs
# Users must enable one of these for TLS support
rustls-native-certs = { version = "0.8", optional = true }
webpki-roots = { version = "1", optional = true }

# Serialization
bytes = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP types
http = { workspace = true }

# Async
futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "time", "rt"] }

# Compression (re-use from core via features)
flate2 = { workspace = true, optional = true }
brotli = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }

# Error handling
thiserror = { workspace = true }

# Random for retry jitter
rand = { workspace = true }

# Base64 for error detail parsing
base64 = { workspace = true }

# Observability (optional)
tracing = { workspace = true, optional = true }

[features]
default = ["tls"]

# TLS with sensible defaults (ring + native roots)
# Most users should just use this
tls = ["tls-ring", "tls-native-roots"]

# TLS crypto providers - choose one
tls-ring = ["rustls/ring", "hyper-rustls/ring"]
tls-aws-lc = ["rustls/aws-lc-rs", "hyper-rustls/aws-lc-rs"]

# TLS root certificates - choose one
tls-native-roots = ["dep:rustls-native-certs", "hyper-rustls/native-tokio"]
tls-webpki-roots = ["dep:webpki-roots", "hyper-rustls/webpki-tokio"]

# Compression features
compression-gzip-stream = [
    "dep:flate2",
    "connectrpc-axum-core/compression-gzip-stream",
]
compression-deflate-stream = [
    "dep:flate2",
    "connectrpc-axum-core/compression-deflate-stream",
]
compression-br-stream = [
    "dep:brotli",
    "connectrpc-axum-core/compression-br-stream",
]
compression-zstd-stream = [
    "dep:zstd",
    "connectrpc-axum-core/compression-zstd-stream",
]
compression-full-stream = [
    "compression-gzip-stream",
    "compression-deflate-stream",
    "compression-br-stream",
    "compression-zstd-stream",
]

# Enable tracing instrumentation for RPC calls
tracing = ["dep:tracing"]

[dev-dependencies]
# For integration tests
connectrpc-axum = { path = "../connectrpc-axum" }
axum = { workspace = true }
tokio = { workspace = true, features = ["full", "macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
