[package]
name = "connectrpc-axum-core"
version = "0.1.0"
edition.workspace = true
description = "Core protocol types for connectrpc-axum (shared between client and server)"
repository.workspace = true
license = "MIT"

[dependencies]
base64 = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

flate2 = { workspace = true, optional = true }
brotli = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }

[features]
default = []
compression-gzip-stream = ["dep:flate2"]
compression-deflate-stream = ["dep:flate2"]
compression-br-stream = ["dep:brotli"]
compression-zstd-stream = ["dep:zstd"]
compression-full-stream = [
    "compression-gzip-stream",
    "compression-deflate-stream",
    "compression-br-stream",
    "compression-zstd-stream",
]
