[package]
name = "connectrpc-axum-examples"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["tonic"]
tonic = [
  "connectrpc-axum/tonic",
  "connectrpc-axum-build/tonic",
  "dep:tonic",
  "dep:tonic-prost",
]

# Example 1: Pure ConnectRPC unary
[[bin]]
name = "connect-unary"
path = "src/bin/connect-unary.rs"

# Example 2: Pure ConnectRPC server streaming
[[bin]]
name = "connect-server-stream"
path = "src/bin/connect-server-stream.rs"

# Example 3: Tonic gRPC unary (also works with ConnectRPC)
[[bin]]
name = "tonic-unary"
path = "src/bin/tonic-unary.rs"
required-features = ["tonic"]

# Example 4: Tonic server streaming (also works with ConnectRPC)
[[bin]]
name = "tonic-server-stream"
path = "src/bin/tonic-server-stream.rs"
required-features = ["tonic"]

# Example 5: Tonic bidirectional streaming (gRPC only)
[[bin]]
name = "tonic-bidi-stream"
path = "src/bin/tonic-bidi-stream.rs"
required-features = ["tonic"]

# Example 6: gRPC-Web via tonic-web
[[bin]]
name = "grpc-web"
path = "src/bin/grpc-web.rs"
required-features = ["tonic"]

# Bug Reproduction: Streaming error handling bypass
[[bin]]
name = "streaming-error-repro"
path = "src/bin/streaming-error-repro.rs"

# Protocol version validation example
[[bin]]
name = "protocol-version"
path = "src/bin/protocol-version.rs"

# Extractor rejection with ConnectError (Connect protocol encoded)
[[bin]]
name = "extractor-connect-error"
path = "src/bin/extractor-connect-error.rs"

# Extractor rejection with plain HTTP response (bypasses Connect encoding)
[[bin]]
name = "extractor-http-response"
path = "src/bin/extractor-http-response.rs"

# EndStream metadata test (verifies metadata in EndStream frames)
[[bin]]
name = "endstream-metadata"
path = "src/bin/endstream-metadata.rs"

# Unary error metadata test (verifies metadata as HTTP headers in unary errors)
[[bin]]
name = "unary-error-metadata"
path = "src/bin/unary-error-metadata.rs"

# Error details test (verifies error details wire format with google.rpc.RetryInfo)
[[bin]]
name = "error-details"
path = "src/bin/error-details.rs"

# Axum router test (verifies add_axum_router bypasses ConnectLayer)
[[bin]]
name = "axum-router"
path = "src/bin/axum-router.rs"

[dependencies]
# Application dependency for error handling
anyhow = "1"
# Application dependency for creating async streams
async-stream = "0.3.5"
# Required: Used by generated service builders
axum = "0.8.0"
# Application dependency for byte buffer handling
bytes = "1"
# Required: Core ConnectRPC runtime
connectrpc-axum = { path = "../connectrpc-axum" }
# Required: Used by generated code for async streams
futures = "0.3.31"
# Required: Used by generated code for HTTP body handling
http-body = "1"
# Application dependency for HTTP body utilities
http-body-util = "0.1"
# Application dependency for HTTP server
hyper = { version = "1.8", features = ["server", "http2"] }
# Application dependency for HTTP/2 h2c support
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto", "http2"] }
# Required: Used by generated code for JSON serialization
pbjson = { workspace = true }
# Required: Used by generated code for well-known types JSON serialization
pbjson-types = { workspace = true }
# Required: Used by generated code for message types
prost = { workspace = true }
# Required: Used for encoding well-known types (Duration, etc.)
prost-types = { workspace = true }
# Required: Used by generated code for serialization
serde = { version = "1.0", features = ["derive"] }
# Application dependency for JSON handling
serde_json = "1"
# Application dependency for async runtime
tokio = { version = "1.47", features = ["full"] }
# Required: Used by generated code for streaming support
tokio-stream = "0.1"
# Required when using tonic feature: Used by generated gRPC server code
tonic = { version = "0.14", optional = true }
# Required when using tonic feature: Used by generated Tonic code
tonic-prost = { workspace = true, optional = true }
# Required for grpc-web example: gRPC-Web support
tonic-web = { version = "0.14" }
# Required: Used by generated service code
tower = { workspace = true }
# Application dependency for logging (used in extractor examples)
tracing-subscriber = "0.3"
# Application dependency for HTTP middleware
tower-http = { version = "0.6", features = ["cors"] }

[build-dependencies]
connectrpc-axum-build = { path = "../connectrpc-axum-build" }
