[package]
name = "connectrpc-axum-examples"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["tonic"]
tonic = [
  "connectrpc-axum/tonic",
  "connectrpc-axum-build/tonic",
  "dep:tonic",
  "dep:tonic-prost",
]

# Enable gzip compression for streaming (basic compression test)
compression-gzip-stream = ["connectrpc-axum/compression-gzip-stream"]

# Enable all compression algorithms for testing
compression-full = ["connectrpc-axum/compression-full"]

# Example 1: Pure ConnectRPC unary
[[bin]]
name = "connect-unary"
path = "src/bin/connect-unary.rs"

# Example 2: Pure ConnectRPC server streaming
[[bin]]
name = "connect-server-stream"
path = "src/bin/connect-server-stream.rs"

# Example 3: Tonic gRPC unary (also works with ConnectRPC)
[[bin]]
name = "tonic-unary"
path = "src/bin/tonic-unary.rs"
required-features = ["tonic"]

# Example 4: Tonic server streaming (also works with ConnectRPC)
[[bin]]
name = "tonic-server-stream"
path = "src/bin/tonic-server-stream.rs"
required-features = ["tonic"]

# Example 5: Tonic bidirectional streaming (gRPC only)
[[bin]]
name = "tonic-bidi-stream"
path = "src/bin/tonic-bidi-stream.rs"
required-features = ["tonic"]

# Example 6: gRPC-Web via tonic-web
[[bin]]
name = "grpc-web"
path = "src/bin/grpc-web.rs"
required-features = ["tonic"]

# Bug Reproduction: Streaming error handling bypass
[[bin]]
name = "streaming-error-repro"
path = "src/bin/streaming-error-repro.rs"

# Extractor rejection with ConnectError (Connect protocol encoded)
[[bin]]
name = "extractor-connect-error"
path = "src/bin/extractor-connect-error.rs"

# Extractor rejection with plain HTTP response (bypasses Connect encoding)
[[bin]]
name = "extractor-http-response"
path = "src/bin/extractor-http-response.rs"

# EndStream metadata test (verifies metadata in EndStream frames)
[[bin]]
name = "endstream-metadata"
path = "src/bin/endstream-metadata.rs"

# Unary error metadata test (verifies metadata as HTTP headers in unary errors)
[[bin]]
name = "unary-error-metadata"
path = "src/bin/unary-error-metadata.rs"

# Error details test (verifies error details wire format with google.rpc.RetryInfo)
[[bin]]
name = "error-details"
path = "src/bin/error-details.rs"

# Streaming compression with gzip (basic test)
[[bin]]
name = "streaming-compression"
path = "src/bin/streaming-compression.rs"

# Client streaming decompression with gzip (basic test)
[[bin]]
name = "client-streaming-compression"
path = "src/bin/client-streaming-compression.rs"

# Streaming compression with all algorithms (deflate, br, zstd)
[[bin]]
name = "streaming-compression-algos"
path = "src/bin/streaming-compression-algos.rs"
required-features = ["compression-full"]

# Client streaming decompression with all algorithms (deflate, br, zstd)
[[bin]]
name = "client-streaming-compression-algos"
path = "src/bin/client-streaming-compression-algos.rs"
required-features = ["compression-full"]

# Unary compression with all algorithms (deflate, br, zstd)
[[bin]]
name = "unary-compression-algos"
path = "src/bin/unary-compression-algos.rs"
required-features = ["compression-full"]

# Client test - tests the ConnectRPC client against the Rust server
[[bin]]
name = "unary-client"
path = "src/bin/client/unary-client.rs"

# Typed client example - demonstrates generated typed client usage
[[bin]]
name = "typed-client"
path = "src/bin/client/typed-client.rs"

# Server stream client test - tests server streaming against the Rust server
[[bin]]
name = "server-stream-client"
path = "src/bin/client/server-stream-client.rs"

# Client stream client test - tests client streaming against the Rust server
[[bin]]
name = "client-stream-client"
path = "src/bin/client/client-stream-client.rs"

# Bidi stream client test - tests bidirectional streaming against the Rust server
[[bin]]
name = "bidi-stream-client"
path = "src/bin/client/bidi-stream-client.rs"

# Streaming interceptor client test - verifies interceptors work with all streaming types
[[bin]]
name = "streaming-interceptor-client"
path = "src/bin/client/streaming-interceptor-client.rs"

# Message-level interceptor test - verifies per-message interception (Issue #29)
[[bin]]
name = "message-interceptor-client"
path = "src/bin/client/message-interceptor-client.rs"

# Typed interceptor test - verifies typed interceptor system on generated clients
[[bin]]
name = "typed-interceptor-client"
path = "src/bin/client/typed-interceptor-client.rs"

# Connect protocol bidi streaming server
[[bin]]
name = "connect-bidi-stream"
path = "src/bin/connect-bidi-stream.rs"

# Connect client streaming server
[[bin]]
name = "connect-client-stream"
path = "src/bin/connect-client-stream.rs"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true }
connectrpc-axum = { path = "../connectrpc-axum" }
connectrpc-axum-client = { path = "../connectrpc-axum-client" }
futures = { workspace = true }
hyper = { workspace = true, features = ["server", "http2"] }
hyper-util = { workspace = true, features = [
  "tokio",
  "server",
  "server-auto",
  "http2",
] }
pbjson = { workspace = true }
pbjson-types = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tonic = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }
tonic-web = { workspace = true }
tower = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
connectrpc-axum-build = { path = "../connectrpc-axum-build" }
