[package]
name = "connectrpc-axum"
version.workspace = true
edition.workspace = true
description = "axum style and axum compatible Connect Protocol server"
readme = "../README.md"
repository = "https://github.com/washanhanzi/connectrpc-axum"
license = "MIT"

[dependencies]
async-stream = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
base64 = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
pbjson = { workspace = true }
pbjson-types = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tokio-stream = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }
tower = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["compression-gzip", "decompression-gzip", "timeout", "limit"] }
tracing = { workspace = true }
flate2 = { workspace = true }
brotli = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }

[features]
default = []
tonic = ["dep:tokio-stream", "dep:tonic", "dep:tonic-prost"]

# Compression algorithm features
# Each feature enables both tower-http layer compression and envelope streaming compression
compression-deflate = ["tower-http/compression-deflate", "tower-http/decompression-deflate"]
compression-br = ["tower-http/compression-br", "tower-http/decompression-br", "dep:brotli"]
compression-zstd = ["tower-http/compression-zstd", "tower-http/decompression-zstd", "dep:zstd"]

# Enable all compression algorithms
compression-full = ["compression-deflate", "compression-br", "compression-zstd"]
